Updated the Dockerfile to have an output folder that appears on the local machine.

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -7,10 +7,14 @@ WORKDIR /app
 COPY ./requirements.txt ./
 
 # Install Python dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+# RUN pip install --no-cache-dir -r requirements.txt - uncomment this when you make changes to requirements.txt
+RUN pip install -r requirements.txt
 
 # Copy the rest of the application files to the container
 COPY ./ ./src
+
+# Create an output folder inside the container
+RUN mkdir -p /app/output
 
 # Specify the command to run the application
 CMD ["python", "src/main.py"]
